@@ -5,6 +5,7 @@ Lib/
 * faster implementation of ldap.schema.tokenizer.split_tokens()
   (thanks to Christian Heimes)
 * removed unused 2nd argument of ldap.schema.tokenizer.split_tokens()
+* fixed method calls in ReconnectLDAPObject (thanks to Philipp Hahn)
 
 Tests/
 * re-factored t_ldap_schema_tokenizer.py
@@ -1347,4 +1348,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.412 2017/02/20 10:25:47 stroeder Exp $
+$Id: CHANGES,v 1.413 2017/04/24 08:25:16 stroeder Exp $
